bk_ida/gccida/c3/try_to_integrate
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2262:4: error: expected ';' after expression
rtx insn; // [rsp+30h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2262:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+30h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2263:4: error: expected ';' after expression
rtx old_stack_level; // [rsp+48h] [rbp-58h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2263:5: error: use of undeclared identifier 'old_stack_level'
rtx old_stack_level; // [rsp+48h] [rbp-58h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2265:4: error: expected ';' after expression
rtx before_call; // [rsp+58h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2265:5: error: use of undeclared identifier 'before_call'
rtx before_call; // [rsp+58h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2266:4: error: expected ';' after expression
rtx temp; // [rsp+60h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2266:5: error: use of undeclared identifier 'temp'
rtx temp; // [rsp+60h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2267:4: error: expected ';' after expression
rtx structure_value_addra; // [rsp+68h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2267:5: error: use of undeclared identifier 'structure_value_addra'; did you mean 'structure_value_addr'?
rtx structure_value_addra; // [rsp+68h] [rbp-38h] 
    ^~~~~~~~~~~~~~~~~~~~~
    structure_value_addr
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2255:91: note: 'structure_value_addr' declared here
rtx  try_to_integrate( tree fndecl, tree actparms, rtx target, int ignore, tree type, rtx structure_value_addr) 
                                                                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2270:4: error: expected ';' after expression
rtx targeta; // [rsp+80h] [rbp-20h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2270:5: error: use of undeclared identifier 'targeta'; did you mean 'target'?
rtx targeta; // [rsp+80h] [rbp-20h] 
    ^~~~~~~
    target
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2255:56: note: 'target' declared here
rtx  try_to_integrate( tree fndecl, tree actparms, rtx target, int ignore, tree type, rtx structure_value_addr) 
                                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2276:1: error: use of undeclared identifier 'targeta'; did you mean 'target'?
targeta = target; 
^~~~~~~
target
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2255:56: note: 'target' declared here
rtx  try_to_integrate( tree fndecl, tree actparms, rtx target, int ignore, tree type, rtx structure_value_addr) 
                                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2279:1: error: use of undeclared identifier 'structure_value_addra'; did you mean 'structure_value_addr'?
structure_value_addra = structure_value_addr; 
^~~~~~~~~~~~~~~~~~~~~
structure_value_addr
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2255:91: note: 'structure_value_addr' declared here
rtx  try_to_integrate( tree fndecl, tree actparms, rtx target, int ignore, tree type, rtx structure_value_addr) 
                                                                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2280:1: error: use of undeclared identifier 'old_stack_level'
old_stack_level = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2281:1: error: use of undeclared identifier 'before_call'
before_call = get_last_insn( ); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2282:15: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_push( TV_INTEGRATION_0); 
              ^~~~~~~~~~~~~~~~
              TV_INTEGRATION
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2283:1: error: use of undeclared identifier 'temp'
temp = expand_inline_function( fndecl, actparms, targeta, ignorea, typea, structure_value_addra); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2283:50: error: use of undeclared identifier 'targeta'; did you mean 'target'?
temp = expand_inline_function( fndecl, actparms, targeta, ignorea, typea, structure_value_addra); 
                                                 ^~~~~~~
                                                 target
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/calls.c:2255:56: note: 'target' declared here
rtx  try_to_integrate( tree fndecl, tree actparms, rtx target, int ignore, tree type, rtx structure_value_addr) 
                                                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_to_integrate/src/obj/calls.o] Error 1
